objects/Street_Address__c.object
<CustomObject>
    <label>Street Address</label>
    <nameField>
        <label>Street Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Street Address</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Donors__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Donors</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Street Address</relationshipLabel>
        <relationshipName>Street_Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SF_Address__c</fullName>
        <formula>Donors__r.MailingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SF Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GC_Address_1__c</fullName>
        <formula>IF(Find(&quot;,&quot;, SF_Address__c) &gt; 0, LEFT( SF_Address__c ,Find(&quot;,&quot;, SF_Address__c)-1), SF_Address__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GC Address 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GC_Address_2__c</fullName>
        <formula>IF(Find(&quot;,&quot;, SF_Address__c) &gt; 0, RIGHT(SF_Address__c, LEN(SF_Address__c) - FIND(&quot;,&quot;, SF_Address__c)), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GC Address 2</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Donors__c</columns>
        <columns>GC_Address_1__c</columns>
        <columns>GC_Address_2__c</columns>
        <columns>SF_Address__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>